# tabela-copa-2026

./: .gitignore  Cargo.toml  Justfile  README.md  VISION.md  data.json  vercel.json
.github/workflows/: update-results.yml
crates/cli/: Cargo.toml
crates/cli/src/: display.rs  fetch.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: bracket.rs  lib.rs  models.rs  simulation.rs  standings.rs
crates/core/tests/: integration_test.rs
crates/web/: Cargo.toml  Trunk.toml  index.html
crates/web/src/: app.rs  main.rs
crates/web/src/pages/: bracket.rs  guaranteed_thirds.rs  mod.rs
static/: style.css
