[package]
name = "copa2026-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "copa2026"
path = "src/main.rs"

[dependencies]
copa2026-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
comfy-table = "7"
