[package]
name = "copa2026-web"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
copa2026-core = { path = "../core" }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
serde.workspace = true
serde_json.workspace = true
gloo-net = { version = "0.6", features = ["json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
